# local-transcription-service

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: api-contract.md  backlog.md  openapi.json
docs/adr/: ADR-012-local-transcription-pipeline.md
docs/changelogs/: CHANGELOG.md
docs/hld/: HLD-001-local-transcription-service.md
docs/runbooks/: lts-operations.md  macmini-deployment.md  whisper-macmini-provisioning.md
docs/tasks/: TASK-B-real-pipeline.md  TASK-B6-followup.md  TASK-C-ack-and-retention.md  TASK-D-trash-retention-multi-worker-hardening.md
scripts/: extract-openapi.py
scripts/launchd/: com.local-transcription-service.plist  com.local-transcription-service.trash-cleanup.plist  local-transcription-service.conf  local.local-transcription-service.plist  run.sh
src/local_transcription_service/: __init__.py  app.py  auth.py  config.py  logging.py  metrics.py  models.py  retention.py  worker.py
src/local_transcription_service/api/: __init__.py  health.py  jobs.py  schemas.py
src/local_transcription_service/pipeline/: __init__.py  base.py  stages.py  whisper_pipeline.py
src/local_transcription_service/queue/: __init__.py  store.py  transcripts.py
src/local_transcription_service/stt/: __init__.py  base.py  litellm_whisper.py  mock.py
tests/: __init__.py  conftest.py  test_ack.py  test_app.py  test_auth.py  test_config.py  test_health.py  test_health_ready.py  test_jobs.py  test_metrics.py  test_pipeline_stages.py  test_retention.py  test_store.py  test_stt_engine.py  test_transcripts.py  test_whisper_pipeline.py  test_worker.py
