[project]
name = "local-transcription-service"
version = "0.1.0"
description = "Local transcription service for the YT Transcript Copier Chrome extension"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
  {name = "Mavis"}
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.27",
  "ruff>=0.7",
]

[project.scripts]
local-transcription-service = "local_transcription_service.app:main"
lts-trash-cleanup = "local_transcription_service.retention:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_transcription_service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]